switching to java 8